[package]
name = "nwserver"
version = "0.1.0"
authors = ["Rink Springer <rink@rink.nu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
# 0.29.0 does not build
pnet = "0.28.0"
pnet_macros = "*"
pnet_macros_support = "*"
log = "0.4"
pretty_env_logger = "0.4.0"
chrono = "0.4"
toml = "0.4.2"
serde = { version = "1.0", features = [ "derive" ] }
rand = "0.8.5"
signal-hook = "0.3.14"
nix = "0.24"

nwserver_macros = { path = "nwserver_macros" }
